# artificial-life

./: .gitignore  README.md  entropy_log.json  extract.py  main.py  pyproject.toml  replicators.jsonl  visualize.py
data/: replicators_complex.jsonl  replicators_medium.jsonl  replicators_noise.jsonl  replicators_simple.jsonl  tokens_complex.txt  tokens_medium.txt  tokens_simple.txt
